--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,10 @@
   <title>SSRAngula</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Primary Meta Tags -->
+  <meta name="title" content="Angular" />
+  <meta name="description" content="The web development framework for building modern apps." />
+  
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
